[package]
name = "cargo-sweep"
description = "A tool for cleaning unused build files created by Cargo"
version = "0.1.1"
authors = ["holmgr <viktor.holmgren@gmail.com>"]
keywords = ["tool", "cli", "cargo"]
license = "MIT"
repository = "https://github.com/holmgr/cargo-sweep"
readme = "README.md"

[dependencies]
clap = "2.32.0"
walkdir = "2"
failure = "0.1.3"
chrono = "0.4.6"
log = "0.4.6"
fern = { version = "0.5", features = ["colored"] }
