[package]
name = "cargo-sweep"
description = "A tool for cleaning unused build files created by Cargo"
version = "0.5.0"
edition = "2018"
authors = ["holmgr <viktor.holmgren@gmail.com>"]
keywords = ["tool", "cli", "cargo"]
license = "MIT"
repository = "https://github.com/holmgr/cargo-sweep"
readme = "README.md"

[dependencies]
clap = "2.32.0"
walkdir = "2"
failure = "0.1.3"
log = "0.4.6"
fern = { version = "0.5", features = ["colored"] }
cargo_metadata = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
