[package]
name = "cargo-sweep"
description = "A tool for cleaning unused build files created by Cargo"
version = "0.6.2"
edition = "2018"
authors = ["holmgr <viktor.holmgren@gmail.com>"]
keywords = ["tool", "cli", "cargo"]
license = "MIT"
repository = "https://github.com/holmgr/cargo-sweep"
readme = "README.md"

[dependencies]
clap = "2.32.0"
crossterm = "0.25.0"
walkdir = "2"
anyhow = "1.0.43"
log = "0.4.6"
fern = { version = "0.5", features = ["colored"] }
cargo_metadata = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.4"
fs_extra = "1.2.0"
human-size = "0.4.2"
predicates = "2.1.1"
tempfile = "3.3.0"
